--- a/template1/css/style.css
+++ b/template1/css/style.css
@@ -129,12 +129,45 @@ body {
 .login-popup {
     display: none;
     width:400px;
-    background-color: white;
+    background-color: rgba(0,0,0,0.7);
+    border:3px solid white;
     z-index: 99;
     margin: auto;
     position: relative;
     top:100px;
     min-height: 100px;
+}
+.login-popup h1 {
+    color:white;
+    text-align: center;
+}
+.login-popup form {
+    width:300px;
+    margin:auto;
+    display: block;
+    padding:40px 0px;
+}
+.login-popup input {
+    width:100%;
+    margin:5px 0;
+    height:30px;
+    padding-left:10px;
+    border:none;
+    color:black;
+    font-size: 1.0rem;
+    outline: none;
+    border-radius: 4px;
+}
+.login-popup button {
+    width:70px;
+    height:40px;
+    margin: auto;
+    display: block;
+    background-color: white;
+    border:none;
+    outline: none;
+    font-size:1.0rem;
+    cursor: pointer;
 }
 .login-popup-bg {
     display: none;
@@ -146,7 +179,7 @@ body {
     left: 0;
     z-index: 98;
 }
-.close {
+.login-popup .close {
     color:black;
     text-decoration: none;
     display:block;
@@ -158,6 +191,7 @@ body {
     position: absolute;
     top:0;
     right:0;
+    color:white;
 }
 .about {
     width:100%;
